compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__pattern_matching_on_literal_record_with_no_args.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub type Wibble { Wibble }\npub fn main() {\n  case Wibble {\n    _ -> Nil\n  }\n}"
---
warning: Match on a literal value
  ┌─ /src/warning/wrn.gleam:4:8
  │
4 │   case Wibble {
  │        ^^^^^^ There's no need to match on this value

Matching on a literal value is redundant since you can already tell which
branch is going to match with this value.
