compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__piping_into_call_which_returns_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  1 |> wibble(2)\n}\n\nfn wibble(a) {\n  fn(b) { #(a, b) }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  1 |> wibble(2)
}

fn wibble(a) {
  fn(b) { #(a, b) }
}


----- WARNING
warning: Deprecated pipe use
  ┌─ /src/warning/wrn.gleam:3:8
  │
3 │   1 |> wibble(2)
  │        ^^^^^^^^^ This should have an extra set of parentheses

This use of pipelines is deprecated, as it creates ambiguity in pipe
syntax. Currently `a |> b(c)` can desugar to either `b(a, c)` or `b(a)(c)`
depending on the type of `b`. The latter syntax is deprecated, and should
not be used.

Hint: Add an extra set of parentheses after the call, like `a |> b(c)()`
