compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__prefer_list_is_empty_over_0_not_eq_list_length.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        import gleam/list\n\n        pub fn main() {\n            let a_list = []\n            let _ = 0 != list.length(a_list)\n        }\n        "
---
----- SOURCE CODE
-- gleam/list.gleam
pub fn length(_list: List(a)) -> Int { 0 }

-- main.gleam

        import gleam/list

        pub fn main() {
            let a_list = []
            let _ = 0 != list.length(a_list)
        }
        

----- WARNING
warning: Inefficient use of `list.length`
  ┌─ /src/warning/wrn.gleam:6:21
  │
6 │             let _ = 0 != list.length(a_list)
  │                     ^^^^^^^^^^^^^^^^^^^^^^^^

The `list.length` function has to iterate across the whole list to
calculate the length, which is wasteful if you only need to know if the
list is empty or not.

Hint: You can use `the_list != []` instead.
